build: add new pckg

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-basic",
+  "name": "ai-keywords-extractor",
   "private": true,
   "version": "0.0.1",
   "type": "module",
