--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-keywords-extractor",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,13 +13,15 @@
     "format": "prettier --loglevel warn --write \"./**/*.{js,jsx,css,md,json}\" ",
     "up-latest": "pnpm up -i -L",
     "clean": "rm -rf node_modules",
-    "reinstall": "pnpm clean && pnpm install"
+    "reinstall": "pnpm clean && pnpm install",
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
-    "framer-motion": "^10.12.7",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
@@ -28,10 +30,12 @@
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.5",
-    "@types/react-dom": "^18.2.3",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -40,15 +44,19 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sonar": "^0.11.1",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "vite": "^4.3.4",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite": "^4.3.5",
+    "vite-plugin-svgr": "^3.2.0",
+    "husky": "^8.0.0"
   },
   "engines": {
     "node": ">=18 || >=19",
     "pnpm": ">=8"
   },
-  "packageManager": "pnpm@8.3.0",
+  "packageManager": "pnpm@8.4.0",
   "eslint.packageManager": "pnpm",
   "pnpm": {
     "peerDependencyRules": {
