chore: minor changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "create-vite-react-chakra-ui",
-  "name": "Vite React App Template",
+  "short_name": "aikye",
+  "name": "AI Keyword Extractor",
   "lang": "en",
   "start_url": "/",
   "background_color": "#FFFFFF",
