--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.8",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -47,11 +49,11 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sonar": "^0.11.1",
     "eslint-plugin-unicorn": "^47.0.0",
+    "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "vite": "^4.3.5",
-    "vite-plugin-svgr": "^3.2.0",
-    "husky": "^8.0.0"
+    "vite-plugin-svgr": "^3.2.0"
   },
   "engines": {
     "node": ">=18 || >=19",
